--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,15 @@
 }
 
 .ildenh {
-    font-size: 10em;
+    font-size: 22vmin;
     text-align: center;
     background: linear-gradient(rgb(128,0,0), rgb(255,0,0));
 }
 
 .link {
-    font-size: 2em;
+    font-size: 8vmin;
+}
+
+.desc {
+    font-size: 5vmin;
 }
